# locked_in

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package-lock.json  package.json
assets/styles/: fonts.scss  main.scss
assets/styles/components/: dialog.scss  hid_devices.scss  rules.scss
src/: config.rs  hid.rs  main.rs  win.rs
src/components/: devices.rs  dialog.rs  edit_device.rs  edit_rule.rs  hid_devices.rs  mod.rs  rules.rs
src/components/events/: capture_focused_window.rs  capture_focused_window_shortcut.rs  edit_window.rs  event_configurator.rs  focused_window_changed.rs  mod.rs
