[package]
name = "locked_in"
version = "0.1.0"
authors = ["Richard <43828146+RichardEpure@users.noreply.github.com>"]
edition = "2024"

[dependencies]
hidapi = "2.6.3"
dioxus = { version = "0.7.1", features = [] }
figment = { version = "0.10.19", features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.10", features = ["serde"] }
anyhow = "1.0.100"
tokio = "1.48.0"
strum = "0.27.2"
strum_macros = "0.27.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Foundation",
] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
